--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,4 +1,4 @@
-pip==8.1.2
+pip==9.0.1
 bumpversion==0.5.3
 wheel==0.29.0
 watchdog==0.8.3
@@ -7,4 +7,5 @@ tox==2.3.1
 coverage==4.1
 Sphinx==1.4.8
 pytest==3.2.1
-
+pytest-cov==
+pytest-html==
