--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,10 +5,18 @@ include CONTRIBUTING.rst
 include HISTORY.rst
 include LICENSE
 include README.rst
+include requirements.txt
+include requirements_dev.txt
 
 recursive-include tests *
 recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
+recursive-include warren/api *
+recursive-include warren/cache *
 recursive-include warren/conf *
+recursive-include warren/data *
+recursive-include warren/datasource *
+recursive-include warren/parsers *
+recursive-include warren/plugins *
