Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,18 +11,15 @@ pool:
 
 steps:
 - script: |
-   pip install wheel
-   pip install twine
+    pip install wheel
+    pip install twine
 
 - script: |
-   python setup.py bdist_wheel
-   
+    python setup.py bdist_wheel
+
 - task: TwineAuthenticate@1
-  displayName: 'Twine Authenticate'
-  inputs:
-    # In this case, name of the feed is 'myTestFeed' in the project 'myTestProject'. Project is needed because the feed is project scoped.
-    artifactFeed: testproject/aproject
-  
-# Use command line script to 'twine upload', use -r to pass the repository name and --config-file to pass the environment variable set by the authenticate task.
+  inputs:
+    artifactFeed: 'testproject/aproduct'
+
 - script: |
-   python -m twine upload -r "testproject /aproject" --config-file $(PYPIRC_PATH) dist/*.whl
+    python -m twine upload -r "testproject/aproduct" --config-file $(PYPIRC_PATH) dist/*.whl
