--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ steps:
 
 - task: TwineAuthenticate@1
   inputs:
-    artifactFeed: 'testproject/aproduct'
+    pythonUploadServiceConnection: 'testproject/aproduct'
 
 - script: |
     python -m twine upload -r "testproject/aproduct" --config-file $(PYPIRC_PATH) dist/*.whl
