--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,4 +22,4 @@ steps:
     artifactFeed: aproduct
 
 - script: |
-    python -m twine upload -r "aproduct" --config-file $(PYPIRC_PATH) dist/*.whl
+    python -m twine upload -r aproduct --config-file $(PYPIRC_PATH) dist/*.whl
